Fix search display on mobile.

--- a/components/byu-search/byu-search.sass
+++ b/components/byu-search/byu-search.sass
@@ -9,6 +9,9 @@
   font-size: 1rem
   box-sizing: border-box
 
+  @media(max-width: $breakMdLg)
+    width: 100%
+
   @media(min-width: $breakMdSm)
     padding: $spacing3 1.25em
 
